# Escolasegura2v

./: .replit  INSTRUCOES_COMPILACAO_APK.md  buildozer.spec  firestore.rules  main.py  main_android.py  main_android_fixed.py  package-lock.json  package.json  pyproject.toml  replit.md  terminal_app.py
.github/workflows/: build-android.yml  build.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
client/src/: App.tsx
client/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
client/src/components/dashboard/: DashboardLayout.tsx
client/src/components/reports/: ReportForm.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useReports.ts
client/src/lib/: firebase.ts
client/src/pages/: CampaignsPage.tsx  ChecklistPage.tsx  Dashboard.tsx  DrillsPage.tsx  EmergencyPage.tsx  ReportsPage.tsx  UsersPage.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
